--- a/resources/views/index.twig
+++ b/resources/views/index.twig
@@ -36,6 +36,7 @@
         <div class="container">
             <div class="content">
                 <h1>Slim 3 has been installed</h1>
+                {{ csrf_inputs|raw }}
             </div>
         </div>
     </body>
